--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,10 @@ cache:
   yarn: true
 install:
   - cd ./functions && yarn install && cd ..
-  - cd web && yarn install && cd ..
+  - cd ./web-client && yarn install && cd ..
 script:
-  - cd web && yarn build && cd ..
-  - cd web && yarn test && cd ..
+  - cd ./web-client && yarn build && cd ..
+  - cd ./web-client && yarn test && cd ..
 deploy:
   skip_cleanup: true
   provider: firebase
